Closed
Bug 367587
Opened 18 years ago
Closed 18 years ago
[FIX]"ASSERTION: Shouldn't be suppressing if the height of a row has not changed!" with clear: left, display: table-*
Categories
(Core :: Layout: Form Controls, defect)
Core
Layout: Form Controls
Tracking
()
RESOLVED
FIXED
mozilla1.9alpha1
People
(Reporter: jruderman, Assigned: bzbarsky)
References
Details
(Keywords: assertion, testcase)
Attachments
(3 files)
|
480 bytes,
text/html
|
Details | |
|
4.52 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
|
899 bytes,
patch
|
Details | Diff | Splinter Review |
Loading this testcase triggers:
###!!! ASSERTION: Shouldn't be suppressing if the height of a row has not changed!: '!IsScrollbarUpdateSuppressed()', file /Users/admin/trunk/mozilla/layout/forms/nsListControlFrame.cpp, line 609
I think this bug can also lead to another assertion, which the testcase does not demonstrate:
###!!! ASSERTION: Shouldn't be suppressing if we don't need a second pass!: '!IsScrollbarUpdateSuppressed()', file /Users/admin/trunk/mozilla/layout/forms/nsListControlFrame.cpp, line 594
| Assignee | ||
Comment 1•18 years ago
|
||
In this case, the nsSelectsAreaFrame is actually reflow twice by the scrollframe -- once with the vertical scrollbar and once without, I think.
In any case, the heightOfARow goes from 238 to 476 and then back to 238. So we suppress scrollbar updates both times, since it's changing. But there's no net change, of course.
The patch just makes the nsListControlFrame do whatever the scrollbar update state suggests as far as the second reflow; this also removes the silly logic duplication.
Attachment #252248 -
Flags: superreview?(roc)
Attachment #252248 -
Flags: review?(roc)
| Assignee | ||
Updated•18 years ago
|
Assignee: nobody → bzbarsky
OS: Mac OS X → All
Hardware: Macintosh → All
Summary: "ASSERTION: Shouldn't be suppressing if the height of a row has not changed!" with clear: left, display: table-* → [FIX]"ASSERTION: Shouldn't be suppressing if the height of a row has not changed!" with clear: left, display: table-*
Target Milestone: --- → mozilla1.9alpha
Attachment #252248 -
Flags: superreview?(roc)
Attachment #252248 -
Flags: superreview+
Attachment #252248 -
Flags: review?(roc)
Attachment #252248 -
Flags: review+
| Assignee | ||
Comment 2•18 years ago
|
||
Fixed.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 3•18 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•