Remove some redundant (but not quite identical, hence asserting) logic.  Bug 367587, r+sr=roc